# wacacom

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: wacacomConfig.cmake
wacacom/: CMakeLists.txt
wacacom/include/wacacom/: CMakeLists.txt  Display.hpp  Math.hpp  Region.hpp  Tablet.hpp
wacacom/include/wacacom/imgui/extensions/: imgui_bezier_editor.hpp
wacacom/source/: CMakeLists.txt  Display.cpp  Main.cpp  Tablet.cpp
wacacom/source/imgui/: CMakeLists.txt  imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
wacacom/source/imgui/extensions/: CMakeLists.txt  imgui_bezier_editor.cpp
